second commit for this repo

--- a/FinalProject_Modeling.ipynb
+++ b/FinalProject_Modeling.ipynb
@@ -267,8 +267,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
+   "execution_count": 61,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -280,7 +282,7 @@
        "                   warm_start=False)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,28 +303,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The log reg score increases by ~4% when incorporating train, test, split. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = logreg2.predict(x_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6086956521739131"
+       "0.6483050847457628"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "logreg2.score(X,y)"
+    "metrics.accuracy_score(y_test,y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +349,7 @@
        "array([-0.00456227,  0.04635654,  0.00569705, -0.00209617, -0.00033959])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,11 +360,82 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since accommodates is the highest rated variable I will do one additional logreg using this as the predictor. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
+       "                   intercept_scaling=1, l1_ratio=None, max_iter=100,\n",
+       "                   multi_class='auto', n_jobs=None, penalty='l2',\n",
+       "                   random_state=None, solver='lbfgs', tol=0.0001, verbose=0,\n",
+       "                   warm_start=False)"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Repeat logistic regression with train, test, split \n",
+    "# using train test split to cross val\n",
+    "logreg3 = LogisticRegression()\n",
+    "\n",
+    "feature_cols = ['accommodates']\n",
+    "X = AB_Clean[feature_cols]\n",
+    "y = AB_Clean.RPM\n",
+    "\n",
+    "x_train, x_test, y_train, y_test = train_test_split(X,y, random_state =42)\n",
+    "\n",
+    "\n",
+    "logreg3.fit(x_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The score goes down when accommodates is the only feature."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "y_pred = logreg3.predict(x_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.556497175141243"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metrics.accuracy_score(y_test,y_pred)"
+   ]
   }
  ],
  "metadata": {
