final push for this notebook

--- a/FinalProject_Modeling.ipynb
+++ b/FinalProject_Modeling.ipynb
@@ -2,15 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import scipy as sp\n",
     "import sklearn as sk\n",
     "import seaborn as sns\n",
     "import nltk\n",
+    "from sklearn import metrics\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer\n",
     "from sklearn.naive_bayes import MultinomialNB         # Naive Bayes\n",
@@ -19,8 +21,6 @@
     "from textblob import TextBlob, Word\n",
     "from nltk.stem.snowball import SnowballStemmer\n",
     "from nltk.corpus import stopwords\n",
-    "import codecs\n",
-    "\n",
     "import time\n",
     "from datetime import date\n",
     "import matplotlib.pyplot as plt\n",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
        "2828       103    1  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
        "0.607281724991163"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
        "array([-0.00478119,  0.05927462,  0.0054951 , -0.00240966, -0.00037408])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -271,7 +271,7 @@
        "                   warm_start=False)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +324,7 @@
     }
    ],
    "source": [
-    "metrics.accuracy_score(y_test,y_pred)\n",
+    "\n",
     "\n",
     "print('Accuracy Score : ' + str(accuracy_score(y_test,y_pred)))\n",
     "print('Precision Score : ' + str(precision_score(y_test,y_pred)))\n",
@@ -344,21 +344,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[128, 186],\n",
-       "       [ 63, 331]], dtype=int64)"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "metrics.confusion_matrix(y_test,y_pred)"
    ]
@@ -381,24 +369,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
-       "                   intercept_scaling=1, l1_ratio=None, max_iter=100,\n",
-       "                   multi_class='auto', n_jobs=None, penalty='l2',\n",
-       "                   random_state=None, solver='lbfgs', tol=0.0001, verbose=0,\n",
-       "                   warm_start=False)"
-      ]
-     },
-     "execution_count": 84,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Repeat logistic regression with train, test, split \n",
     "# using train test split to cross val\n",
@@ -424,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,22 +406,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy Score : 0.652542372881356\n",
-      "Precision Score : 0.6417624521072797\n",
-      "Recall Score : 0.850253807106599\n",
-      "F1 Score : 0.7314410480349344\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "metrics.accuracy_score(y_test,y_pred)\n",
     "\n",
@@ -460,20 +422,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([-0.00446668,  0.00586177, -0.00215758, -0.00032564])"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "coef3 = logreg3.coef_[0]\n",
     "coef3"
@@ -481,21 +432,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[127, 187],\n",
-       "       [ 59, 335]], dtype=int64)"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "metrics.confusion_matrix(y_test,y_pred)"
    ]
@@ -517,114 +456,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['Unnamed: 0', 'last_scraped', 'name', 'summary', 'space', 'description',\n",
-       "       'neighborhood_overview', 'transit', 'access', 'house_rules',\n",
-       "       'host_since', 'host_about', 'host_total_listings_count',\n",
-       "       'neighbourhood', 'zipcode', 'room_type', 'accommodates', 'bathrooms',\n",
-       "       'beds', 'bed_type', 'amenities', 'price', 'availability_90',\n",
-       "       'calendar_last_scraped', 'first_review', 'last_review',\n",
-       "       'calculated_host_listings_count', 'reviews_per_month', 'price_int',\n",
-       "       'price_bed', 'Host_Age', 'RPM'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "AB_Clean.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Admin\\anaconda3_v2\\lib\\site-packages\\ipykernel_launcher.py:4: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  after removing the cwd from sys.path.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>host_about</th>\n",
-       "      <th>name</th>\n",
-       "      <th>description</th>\n",
-       "      <th>RPM</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>I live in Boston and I like to travel and have...</td>\n",
-       "      <td>Charming room in pet friendly apt</td>\n",
-       "      <td>Charming and quiet room in a second floor 1910...</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>I am a middle-aged, single male with a wide ra...</td>\n",
-       "      <td>Mexican Folk Art Haven in Boston</td>\n",
-       "      <td>Come stay with a friendly, middle-aged guy in ...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                          host_about  \\\n",
-       "0  I live in Boston and I like to travel and have...   \n",
-       "1  I am a middle-aged, single male with a wide ra...   \n",
-       "\n",
-       "                                name  \\\n",
-       "0  Charming room in pet friendly apt   \n",
-       "1   Mexican Folk Art Haven in Boston   \n",
-       "\n",
-       "                                         description  RPM  \n",
-       "0  Charming and quiet room in a second floor 1910...    1  \n",
-       "1  Come stay with a friendly, middle-aged guy in ...    0  "
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# create new table with just the text columns and RPM\n",
     "\n",
@@ -649,20 +492,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.6426553672316384\n",
-      "1    0.556497\n",
-      "0    0.443503\n",
-      "Name: RPM, dtype: float64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Define X and y.\n",
     "X = AB_Clean_text.name\n",
@@ -689,46 +521,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(2121, 10000)"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When description is the text field the score goes up to ~68.22"
+    "#### When description is the text field the score goes up to ~68.22"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.6822033898305084\n",
-      "1    0.556497\n",
-      "0    0.443503\n",
-      "Name: RPM, dtype: float64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Define X and y.\n",
     "X = AB_Clean_text.description\n",
@@ -768,25 +571,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using the host about column we get the lowest score of ~61.8%"
+    "#### Using the host about column we get the lowest score of ~61.8%"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.6186440677966102\n",
-      "1    0.556497\n",
-      "0    0.443503\n",
-      "Name: RPM, dtype: float64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Define X and y.\n",
     "X = AB_Clean_text.host_about\n",
@@ -817,27 +609,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using the description column and a TF/IDF vectorizer, as well as setting the max_df to 1000 I am able to increase the accuracy to ~68.9%!\n",
+    "#### Using the description column and a TF/IDF vectorizer, as well as setting the max_df to 1000 I am able to increase the accuracy to ~68.9%!\n",
     "\n",
-    "This is 13% above the training value. "
+    "#### This is 13% above the training value. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.6892655367231638\n",
-      "1    0.556497\n",
-      "0    0.443503\n",
-      "Name: RPM, dtype: float64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Define X and y.\n",
     "X = AB_Clean_text.description\n",
@@ -868,6 +649,180 @@
    "metadata": {},
    "source": [
     "##### Combine text and quantitative variables using Naive Bayes, as well as Logistic Regression to see which performs best out of the two"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "host_total_listings_count      int64\n",
+       "availability_90                int64\n",
+       "price_bed                    float64\n",
+       "Host_Age                       int64\n",
+       "description                   object\n",
+       "RPM                            int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create table with just desired variables\n",
+    "# I used description as the text field because this was the best predictor from the text columns\n",
+    "# Apply Train Test Split\n",
+    "AB_Clean_Vars = AB_Clean[['host_total_listings_count','availability_90','price_bed','Host_Age','description','RPM']]\n",
+    "AB_Clean_Vars.head(3)\n",
+    "\n",
+    "feature_cols = ['host_total_listings_count','availability_90','price_bed','Host_Age','description']\n",
+    "X = AB_Clean_Vars[feature_cols]\n",
+    "y= AB_Clean_Vars.RPM\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X,y, random_state=42)\n",
+    "AB_Clean_Vars.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2121, 10000)\n",
+      "(708, 10000)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# I am going to use TfIdf to create the matrix and leave the same parameters that I used for the best predictive model\n",
+    "vect = TfidfVectorizer(stop_words='english',ngram_range=(1,2),max_df=1000,max_features=10000)\n",
+    "\n",
+    "X_train_dtm = vect.fit_transform(X_train.description)\n",
+    "X_test_dtm = vect.transform(X_test.description)\n",
+    "print((X_train_dtm.shape))\n",
+    "print((X_test_dtm.shape))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(708, 10004)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Cast other feature columns to float and convert to a sparse matrix.\n",
+    "extra = sp.sparse.csr_matrix(X_train.drop('description', axis=1).astype(float))\n",
+    "extra.shape\n",
+    "\n",
+    "# Combine sparse matrices for training and testing datasets respectively\n",
+    "X_train_dtm_extra = sp.sparse.hstack((X_train_dtm, extra))\n",
+    "X_train_dtm_extra.shape\n",
+    "\n",
+    "\n",
+    "extra = sp.sparse.csr_matrix(X_test.drop('description', axis=1).astype(float))\n",
+    "X_test_dtm_extra = sp.sparse.hstack((X_test_dtm, extra))\n",
+    "X_test_dtm_extra.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 71% accuracy using logistic regression with all quantitaive test variables and the description.This ended up being the best model for this set of data. The value of 71% was ~16% more accurate than the null hypothesis. This model also has the highest precision score of all the models meaning that it has a good balance of bias vs. variance. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy Score : 0.71045197740113\n",
+      "Precision Score : 0.7266187050359713\n",
+      "Recall Score : 0.7690355329949239\n",
+      "F1 Score : 0.7472256473489519\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Admin\\anaconda3_v2\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:940: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  extra_warning_msg=_LOGISTIC_SOLVER_CONVERGENCE_MSG)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Use logistic regression with all features, and print out LogReg metrics\n",
+    "logreg = LogisticRegression(C=1e9)\n",
+    "logreg.fit(X_train_dtm_extra, y_train)\n",
+    "y_pred_class = logreg.predict(X_test_dtm_extra)\n",
+    "#print((metrics.accuracy_score(y_test, y_pred_class)))\n",
+    "\n",
+    "print('Accuracy Score : ' + str(accuracy_score(y_test,y_pred_class)))\n",
+    "print('Precision Score : ' + str(precision_score(y_test,y_pred_class)))\n",
+    "print('Recall Score : ' + str(recall_score(y_test,y_pred_class)))\n",
+    "print('F1 Score : ' + str(f1_score(y_test,y_pred_class)))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy Score : 0.635593220338983\n",
+      "Precision Score : 0.6069182389937107\n",
+      "Recall Score : 0.9796954314720813\n",
+      "F1 Score : 0.7495145631067961\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Use Naive Bayes with all features, and print out LogReg metrics\n",
+    "nb = MultinomialNB()\n",
+    "nb.fit(X_train_dtm_extra, y_train)\n",
+    "y_pred_class = nb.predict(X_test_dtm_extra)\n",
+    "#print((metrics.accuracy_score(y_test, y_pred_class)))\n",
+    "\n",
+    "print('Accuracy Score : ' + str(accuracy_score(y_test,y_pred_class)))\n",
+    "print('Precision Score : ' + str(precision_score(y_test,y_pred_class)))\n",
+    "print('Recall Score : ' + str(recall_score(y_test,y_pred_class)))\n",
+    "print('F1 Score : ' + str(f1_score(y_test,y_pred_class)))"
    ]
   },
   {
